--- a/index.html
+++ b/index.html
@@ -4,11 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;900&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="./styles.css">
+
     <title> CDI - Comissão de Informática </title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="logo">
+                <img src="./img/Logo CDI.png" alt="" srcset="">
+                <p>Comissão Discente de Informática</p>
+            </div>
+            <nav>
+                <ul>
+                    <li> <a href="#home"> Home </a> </li>
+                    <li> <a href="#cursos"> Cursos </a> </li>
+                    <li> <a href="#membros"> Membros </a> </li>
+                    <li> <a href="#contato"> Contato </a> </li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section id="home" class="welcome">
+                <div class="title-welcome">
+                    <h3>Somos a comissão responsável pelos cursos de <br> </h3>
+                    <h1>Tecnologia da UNICAMP</h1>
+                </div>
+                <div class="img-welcome">
+                    <img src="./img/3d-computer.png" alt="" srcset="">
+                </div>
+            </section>
+        </main>
+
+        <footer>
+
+        </footer>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
