--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <div class="welcome container">
                     <div class="title-welcome">
-                        <h3>Somos a comissão responsável pelos cursos de <br> </h3>
+                        <h3>Somos a comissão responsável pelos cursos de </h3>
                         <h1>Tecnologia da UNICAMP</h1>
                     </div>
                     <div class="img-welcome">
