--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <li> Vinicius da Silva Germano </li>
                             
                             <p> Membros: </p>
-                            <li> Rafael Caleffi Onofres  </li>
+                            <li> Rafael Caleffi Onofre </li>
                             <li> Cleyvesson Gomes da Silva  </li>
                             <li> Iara de Souza Vaneti  </li>
                         </ul>
