Feat: implementando sessão de contato

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./styles/cursos.css">
     <link rel="stylesheet" href="./styles/home.css">
     <link rel="stylesheet" href="./styles/areas.css">
+    <link rel="stylesheet" href="./styles/contato.css">
+
+    <link rel="shortcut icon" href="./img/cdi.png" />
 
     <title> CDI - Comissão de Informática </title>
 </head>
@@ -47,7 +50,7 @@
         <main>
 
             <div class="cursos container" id="cursos">
-                <h1> CURSOS </h1>
+                <h1 class="titulo-section"> CURSOS </h1>
                 <div class="cursos-body">
                     <div class="tads">
                         <h3> Tecnologia em Análise e Desenvolvimento de Sistemas </h3>
@@ -65,7 +68,7 @@
             </div>
 
             <div class="areas container" id="areas">
-                <h1> ÁREAS </h1>
+                <h1 class="titulo-section"> ÁREAS </h1>
                 <div class="areas-body">
                     <div class="diretoria card-area">
                         <h3> Diretoria </h3>
@@ -144,11 +147,27 @@
                     </div>
                 </div>
             </div>
+
+            <div class="contato" id="contato">
+                <div class="contato-body"> 
+                    <div class="contato-img">
+                        <img src="./img/Logo CDI.png" alt="" srcset="">
+                    </div>
+                    <div class="contato-text">
+                        <h1> CONTATO </h1>
+                        <a href="https://www.instagram.com/comissaodeinformatica/"><i class="fa-brands fa-instagram"></i>@comissaodeinformatica</a>
+                        <a href="mailto:comissao.informatica.ft@gmail.com"> <i class="fa-solid fa-envelope"></i>comissao.informatica.ft@gmail.com </a>
+                        <a href="https://www.linkedin.com/company/cdi-ft-unicamp/"> <i class="fa-brands fa-linkedin"></i> CDI - FT </a>  
+                    </div>
+                </div>
+            </div>
         </main>
 
         <footer>
 
         </footer>
+    
     <script src="./script.js"></script>
+    <script src="https://kit.fontawesome.com/f69a41ce29.js" crossorigin="anonymous"></script>
 </body>
 </html>
