Feat: adicionando btn 'voltar ao topo'

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <title> CDI - Comissão de Informática </title>
 </head>
 <body>
+        <div id="back-to-top">
+            <button ><i class="fa-solid fa-arrow-up"></i></button>
+            <p>Voltar <br> ao topo </p>
+        </div>
+        
         <section>
             <div id="home" class="home">
                 <header class="container">
