Fix: alterando imagem && Fix: alterando textos dos cursos

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <img src="img/gallery/foto7.jpg" class="gallery__img img-zoom" alt="Image 7">
                       </figure>
                       <figure class="gallery__item gallery__item-8">
-                        <img src="img/gallery/foto8.jpg" class="gallery__img img-zoom" alt="Image 8">
+                        <img src="img/gallery/foto8.jfif" class="gallery__img img-zoom" alt="Image 8">
                       </figure>
                       <figure class="gallery__item gallery__item-9">
                         <img src="img/gallery/foto9.jpg" class="gallery__img img-zoom" alt="Image 9">
@@ -121,13 +121,27 @@
                     <div class="tads">
                         <h3> Tecnologia em Análise e Desenvolvimento de Sistemas </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida ex arcu, ut pellentesque felis maximus vel. Curabitur in justo ac sem luctus varius vel non ligula. Proin varius commodo nunc, quis feugiat odio vulputate nec. Sed eu orci neque. Fusce quis molestie leo, eu laoreet nulla. Praesent rutrum diam odio, vitae commodo urna placerat non. In sagittis lobortis tellus, vel lacinia lorem ornare in. Nulla pellentesque, ex a facilisis placerat, enim diam rutrum nunc, vitae ullamcorper dolor neque a neque. Donec faucibus tincidunt sem, fermentum varius mauris lacinia eu. Nunc blandit lectus et efficitur lacinia. Sed vel justo diam. Praesent in efficitur dolor. Vestibulum nunc nisl, molestie nec tellus non, pretium laoreet urna. Sed et nisi vitae ipsum volutpat aliquet. Duis ullamcorper nunc tortor, vel egestas nisi sagittis in. Sed tincidunt fermentum tempor. Phasellus quis magna pharetra, suscipit erat nec, fermentum ante. Sed fringilla rutrum ornare. Praesent posuere mauris lectus, vitae euismod sapien aliquam eget.
+                            O curso de T.A.D.S, têm como intuito formar profissionais com uma base sólida, de modo ao qual seja prático aplicar os conhecimentos teóricos na intensa vivência prática que o mundo da tecnologia proporciona.
+                            <br>
+                            <br> <b> Período: </b> Noturno
+                            <br> <b>Carga horária estimada: </b>  2.430 horas
+                            <br> <b>Integralização:  </b> 07 semestres
+                            <br> <b>Vagas: </b> 45
+
+                            <br> <b> Currículo pleno (Disciplinas a serem cursadas 2023):</b>  <a href="https://www.dac.unicamp.br/sistemas/catalogos/grad/catalogo2023/cursos/36t/curriculo.html" target="_blank"> Link clicando aqui </a>
                         </p>
                     </div>
                     <div class="si">
-                        <h3> Sistemas de Informação </h3>
+                        <h3> Bacharelado em Sistemas de Informação </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum gravida ex arcu, ut pellentesque felis maximus vel. Curabitur in justo ac sem luctus varius vel non ligula. Proin varius commodo nunc, quis feugiat odio vulputate nec. Sed eu orci neque. Fusce quis molestie leo, eu laoreet nulla. Praesent rutrum diam odio, vitae commodo urna placerat non. In sagittis lobortis tellus, vel lacinia lorem ornare in. Nulla pellentesque, ex a facilisis placerat, enim diam rutrum nunc, vitae ullamcorper dolor neque a neque. Donec faucibus tincidunt sem, fermentum varius mauris lacinia eu. Nunc blandit lectus et efficitur lacinia. Sed vel justo diam. Praesent in efficitur dolor. Vestibulum nunc nisl, molestie nec tellus non, pretium laoreet urna. Sed et nisi vitae ipsum volutpat aliquet. Duis ullamcorper nunc tortor, vel egestas nisi sagittis in. Sed tincidunt fermentum tempor. Phasellus quis magna pharetra, suscipit erat nec, fermentum ante. Sed fringilla rutrum ornare. Praesent posuere mauris lectus, vitae euismod sapien aliquam eget.
+                            O curso de S.I possui um papel fundamental em um mundo que viabiliza a rapidez da informação pois a compreensão dos sistemas informacionais é de extrema importância. O profissional qualificado pela área desenvolve duas principais habilidades: projetar e implantar os sistemas que  integram o mundo digital.
+                            <br>
+                            <br> <b>Período: </b> Integral
+                            <br> <b>Carga horária estimada: </b>  3.060 horas
+                            <br> <b>Integralização:  </b> 08 semestres
+                            <br> <b>Vagas: </b> 45
+
+                            <br> <b> Currículo pleno (Disciplinas a serem cursadas 2023):</b>  <a href="https://www.dac.unicamp.br/sistemas/catalogos/grad/catalogo2023/cursos/94g/curriculo.html" target="_blank"> Link clicando aqui </a>
                         </p>
                     </div>
                 </div>
